fixe wrap of  middle section

--- a/style.css
+++ b/style.css
@@ -177,15 +177,17 @@ footer {
 }
 
 cards{
-    width: 80%;
+    /* width: 80%;  */
+   max-width: 80%;
     justify-content: center ;
     align-items: center ;
     padding: 1rem;
     flex-direction: row;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
 }
 
 figure{
+    max-width: 200px;
     display: flex;
     flex-wrap: wrap;
 }
